# leo_robot-ros2

./: LICENSE  README.md
.github/workflows/: ci-iron.yml  ci-rolling.yml  ci.yml
leo_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_bringup/camera_info/: leo_camera.yaml
leo_bringup/config/: firmware.yaml  firmware_diff_drive_params.yaml  firmware_mecanum_params.yaml  firmware_message_converter.yaml  v4l2_camera.yaml
leo_bringup/launch/: leo_bringup.launch.xml
leo_bringup/scripts/: leo_system
leo_fw/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_fw/data/: default_firmware_params.yaml
leo_fw/data/hw_tests/: battery.yaml  encoder.yaml  encoder_load.yaml  imu.yaml  torque.yaml  torque_load.yaml
leo_fw/leo_fw/: __init__.py  agent.py  board.py  flash.py  test_hw.py  utils.py
leo_fw/leo_fw/nodes/: __init__.py  imu_calibrator.py  parameter_bridge.py
leo_fw/scripts/: calibrate_imu  firmware_parameter_bridge  flash  test_hw  update
leo_fw/src/: firmware_message_converter.cpp
leo_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
