<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo_bringup</name>
  <version>1.4.0</version>
  <description>
    Scripts and launch files for starting basic Leo Rover functionalities. 
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  
  <license>MIT</license>
  
  <url type="website">http://wiki.ros.org/leo_bringup</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_robot-ros2/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_robot-ros2</url>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
  <author email="aleks@fictionlab.pl">Aleksander Szymański</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>leo_description</exec_depend>
  <exec_depend>leo_fw</exec_depend>

  <!-- <exec_depend>web_video_server</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>

</package>
