<?xml version="1.0"?>
<package format="3">
  <name>leo_fw</name>
  <version>0.0.0</version>
  <description>
    Binary releases of Leo Rover firmware and related utilities
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_fw</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_robot/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_robot</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>leo_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>