<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo_fw</name>
  <version>0.0.0</version>
  <description>
    Binary releases of Leo Rover firmware and related utilities
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_fw</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_robot-ros2/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_robot-ros2</url>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>leo_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>